[workspace]

[package]
name = "mammothon-meme-be"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "mammothon_meme_be-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.13.2", default-features = false }

[dependencies]
loco-rs = { workspace = true , features = ["cli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.33.0", default-features = false, features = ["rt-multi-thread"] }
async-trait = "0.1.74"
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
convex = "0.9.0"
dotenvy = "0.15.7"

[[bin]]
name = "mammothon_meme_be-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = "3.1.1"
rstest = "0.21.0"
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
